--- a/css/events.css
+++ b/css/events.css
@@ -65,3 +65,21 @@ h3{
     width: 25rem;
     height: 25rem;
 }
+
+.offer {
+    background-color: var(--color-2);
+    margin: 0;
+    padding: 0;
+}
+
+.wrapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
+.box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
