--- a/css/events.css
+++ b/css/events.css
@@ -27,16 +27,18 @@ body {
 }
 
 p {
-    font-family: var(--primary-font)
-}
-
-h1{
-    font-family: var(--secondary-font)
-}
-
-h3{
     font-family: var(--primary-font);
-   text-transform: uppercase;
+    font-weight: 300;
+}
+
+h1 {
+    font-family: var(--secondary-font);
+    padding-bottom: 5vw;
+}
+
+h3 {
+    font-family: var(--primary-font);
+    text-transform: uppercase;
     color: var(--color-3);
     font-weight: 300;
 }
@@ -52,14 +54,14 @@ h3{
     padding-top: 3rem
 }
 
-.publiceventsimg{
+.publiceventsimg {
     background-image: url(../images/photos/events/publicevents.png);
     background-size: cover;
     width: 25rem;
     height: 25rem;
 }
 
-.privateeventsimg{
+.privateeventsimg {
     background-image: url(../images/photos/events/private%20events.png);
     background-size: cover;
     width: 25rem;
@@ -68,8 +70,11 @@ h3{
 
 .offer {
     background-color: var(--color-2);
-    margin: 0;
-    padding: 0;
+    margin: 0 -6vw;
+    padding: 0 6vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .wrapper {
@@ -81,5 +86,14 @@ h3{
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.testimonial {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.textcard {
 
 }
