--- a/css/events.css
+++ b/css/events.css
@@ -2,7 +2,7 @@
 
 * {
     margin: 0;
-    padding: 0;
+/*    padding: 0;*/
     box-sizing: border-box;
     list-style-type: none;
 }
@@ -42,14 +42,14 @@ h1{
 
 h2, h5 {
     font-family: var(--secondary-font);
-    padding-bottom: 5vw;
+    padding-bottom: 3vw;
     font-size: 3vw;
 }
 
 h3 {
     font-family: var(--primary-font);
     text-transform: uppercase;
-    color: var(--color-3);
+    color: #B2B2B2;
     font-weight: 300;
 }
 
@@ -136,7 +136,7 @@ button {
     align-items: center;
 }
 
-.testimonial {
+.testimonial, .prices {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -176,4 +176,10 @@ button {
     display: flex;
     flex-direction: column;
     justify-content: space-around
+}
+
+li {
+    display: list-item;
+    list-style:disc;
+     line-height: 1.5rem
 }
