--- a/css/product.css
+++ b/css/product.css
@@ -16,6 +16,7 @@
     --color-5: #ba2424;
     --color-6: #E5D290;
     --color-7: #D3999F;
+    --color-8: #B2B2B2;
 
 
     --primary-font: 'Lato', sans-serif;
@@ -31,6 +32,27 @@ body {
 }
 
 
+/* TEXT STYLING */
+
+p {
+    font-family: var(--primary-font);
+    font-weight: 300;
+}
+
+h2,
+h5 {
+    font-family: var(--secondary-font);
+    font-size: 3vw;
+}
+
+h3 {
+    font-family: var(--primary-font);
+    text-transform: uppercase;
+    color: var(--color-8);
+    font-weight: 300;
+}
+
+
 /* NAV STYLING */
 
 nav {
@@ -38,6 +60,7 @@ nav {
     justify-content: space-between;
     grid-template-columns: 1fr 3fr;
     background: var(--color-2);
+    margin-bottom: 12vw;
 }
 
 nav ul {
@@ -74,33 +97,7 @@ nav a {
 }
 
 
-/* TEXT STYLING */
 
-p {
-    font-family: var(--primary-font);
-    font-weight: 300;
-}
-
-
-h1{
-    align-self: center;
-    color: white;
-    font-family: var(--secondary-font);
-    font-weight: 500;
-}
-
-h2 {
-    font-family: var(--secondary-font);
-    padding-bottom: 3vw;
-    font-size: 3vw;
-}
-
-h3 {
-    font-family: var(--primary-font);
-    text-transform: uppercase;
-    color: #B2B2B2;
-    font-weight: 300;
-}
 
 .intro {
     text-align: center;
@@ -123,50 +120,114 @@ h3 {
 }
 
 
-/* FILTERS STYLING */
-
-.filterwrapper {
+.wrapper2 {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    padding: 0vw 25vw 2vw;
+    grid-template-columns: 1fr 1fr;
 }
 
-.allwines_filter, .white_filter, .red_filter, .rose_filter {
+.wineinfo {}
+
+.wineimages {
+    display: flex;
+    width: 31rem;
+}
+
+.product_background {
+    width: 26rem;
+}
+
+.product_image {
+    width: 8rem;
+    height: auto;
+    position: relative;
+    right: 5rem;
+    top: -4rem
+}
+
+.wineinfo ul {
+    display: flex;
+    justify-content: space-around;
+    color: var(--color-8);
+    font-family: var(--primary-font);
+    margin: 4vw 0 2vw 0;
+}
+
+.wineinfo ul li {
+    padding: 0 0 1vw 0;
+    border-bottom: 2px solid white;
+}
+
+.wineinfo ul li:active {
+    color: var(--color-5);
+    border-bottom: 2px solid var(--color-5);
+    transition: 0.5s;
+}
+
+.wineinfo ul li:hover {
+    color: var(--color-5);
+    border-bottom: 2px solid var(--color-5);
+    transition: 0.5s;
+}
+
+.center {
+    text-align: center;
+}
+
+.product_price {
+    font-family: var(--secondary-font);
+    font-weight: 600;
+    color: var(--color-5)
+}
+
+.shopping_buttons {
+    display: flex;
+    align-items: center;
+}
+
+button {
+    background-color: var(--color-5);
+    color: white;
+    text-transform: uppercase;
+    border: none;
+    padding: 1.3vw 2vw;
+    width: fit-content;
+
+}
+
+.minus_btn {
+    background-color: var(--color-2);
+}
+
+.plus_btn {
+    background-color: var(--color-2);
+    margin-right: 1vw;
+}
+
+.shopping_buttons p {
+    padding: 0 2vw
+}
+
+.winery_info {
+    display: grid;
+    grid-template-columns: 1fr 5fr;
+}
+
+.winery_logo {
+    width: 15vw;
+}
+
+
+.wrapper5 {
+    display: flex;
+    justify-content: space-around
+}
+
+.box {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.allwines_filter{
-    padding: 0vw 5vw;
-    line-height: 2.5vw;
-    text-align: center;
+.suggestion_img {
+    height: 15vw;
 }
-
-.filternav a {
-    text-decoration: none;
-    font-family: var(--primary-font);
-    font-size: 1.3vw;
-    font-weight: 300;
-}
-
-.whitefilter_dot, .redfilter_dot, .rosefilter_dot{
-    height: 2vw;
-    width: 2vw;
-    border-radius: 2vw;
-    margin-bottom: 0.8vw;
-}
-
-.whitefilter_dot {
-    background-color: var(--color-6);
-}
-
-.redfilter_dot {
-    background-color: var(--color-5);
-}
-
-.rosefilter_dot {
-    background-color: var(--color-7);
-}
-
-.product
