--- a/css/events.css
+++ b/css/events.css
@@ -1,8 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Lato:wght@100;300;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Text&display=swap');
 
 * {
     margin: 0;
-/*    padding: 0;*/
+    /*    padding: 0;*/
     box-sizing: border-box;
     list-style-type: none;
 }
@@ -33,14 +34,15 @@ p {
 }
 
 
-h1{
+h1 {
     align-self: center;
     color: white;
     font-family: var(--secondary-font);
     font-weight: 500;
 }
 
-h2, h5 {
+h2,
+h5 {
     font-family: var(--secondary-font);
     padding-bottom: 3vw;
     font-size: 3vw;
@@ -118,11 +120,27 @@ button {
 }
 
 
-.offer {
+.offers {
     background-color: var(--color-2);
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.offers h2 {
+    color: white;
+}
+
+.offer img {
+    height: 12vw;
+}
+
+.offer_title {
+    color: white
+}
+
+.offer_des {
+    color: var(--color-3)
 }
 
 .wrapper {
@@ -134,21 +152,22 @@ button {
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-align: center
 }
 
-.testimonial, .prices {
+.testimonial,
+.prices {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-
-.textcard {}
 
 .wrapper2 {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-gap: 3vw
 }
+
 .event1image {
     background-image: url(../images/photos/events/tastingcph.png);
     background-size: cover;
@@ -169,7 +188,7 @@ button {
 }
 
 .center {
-   text-align: center;
+    text-align: center;
 }
 
 .textbox {
@@ -180,6 +199,66 @@ button {
 
 li {
     display: list-item;
-    list-style:disc;
-     line-height: 1.5rem
+    list-style: disc;
+    line-height: 1.5rem
+}
+
+.quotemark_grey {
+    background-image: url(../images/icons/events/quotemark_grey.png);
+    background-size: cover;
+    width: 12vw;
+    height: 20vw;
+    position: relative;
+    bottom: -6vw;
+    z-index: 1;
+}
+
+.quotemark_red {
+    background-image: url(../images/icons/events/quotemark_red.png);
+    background-size: cover;
+    width: 12vw;
+    height: 20vw;
+    position: relative;
+    bottom: -6vw;
+    z-index: 1;
+}
+
+.test_card_grey {
+    position: relative;
+    background-color: var(--color-3);
+    border-radius: 6px;
+    box-shadow: -1px 2px 9px 1px rgba(0, 0, 0, 0.35);
+
+}
+
+.test_card_white {
+    position: relative;
+    background-color: white;
+    border-radius: 6px;
+    box-shadow: -1px 2px 9px 1px rgba(0, 0, 0, 0.35);
+    z-index: -1;
+}
+
+.test_des {
+    padding: 4vw 3vw;
+}
+
+.left {
+    position: relative;
+    left: 2vw;
+}
+
+.middle {
+    position: relative;
+    top: -6vw;
+}
+
+.right {
+    position: relative;
+    right: 2vw;
+}
+
+.test_person {
+    position: relative;
+    top: -2vw
 }
