--- a/css/style.css
+++ b/css/style.css
@@ -550,10 +550,12 @@ footer {
 
 .copyright {
     text-align: center;
-    margin-top: 4vw;
+    margin-top: 3vw;
     font-family: var(--primary-font);
     font-size: 1vw;
     font-weight: 300;
     color: white;
+    background-color: var(--color-2);
+    padding-bottom: 2vw;
 }
 
