--- a/css/style.css
+++ b/css/style.css
@@ -616,8 +616,6 @@ footer {
         flex-wrap: wrap;
         justify-content: space-around;
         flex-direction: column-reverse;
-
-
     }
 
     .moldova_map {
@@ -648,7 +646,62 @@ footer {
         margin-bottom: 2vw;
     }
 
+    .icon_des {
+        visibility: hidden;
+    }
 
+    .icon {
+        width: 10vw;
+        text-align: center;
+    }
 
+    .wrapper {
+        grid-gap: 1rem;
+    }
 
+    .icon_title {
+        font-size: 2vw;
+    }
+
+    .about_us {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        flex-direction: column-reverse;
+        margin-top: 8vw;
+    }
+
+    .about_us_img {
+        height: auto;
+        width: 80vw;
+        margin: 0;
+        margin-top: 6vw;
+        margin-left: 5vw;
+    }
+
+    .about_us_text {
+        text-align: center;
+    }
+
+    .about_us_text h3 {
+        font-size: 2.5vw;
+    }
+
+    .about_us_text h1 {
+        font-size: 4vw;
+        margin-top: 1vw;
+    }
+
+    .about_us_text p {
+        font-size: 3vw;
+        margin-bottom: 2vw;
+    }
+
+    .about_us_text button {
+        align-self: center;
+        font-size: 2.3vw;
+        width: 30vw;
+        padding: 2.5vw;
+        margin-top: 1vw;
+    }
 }
