additional css styling on mobile version homepage, last two sections

--- a/css/style.css
+++ b/css/style.css
@@ -704,4 +704,83 @@ footer {
         padding: 2.5vw;
         margin-top: 1vw;
     }
+
+    .our_treasure {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        flex-direction: column-reverse;
+        margin-top: 8vw;
+        text-align: center;
+        padding-top: 3vw;
+    }
+
+    .our_treasure_text h3 {
+        font-size: 2.5vw;
+    }
+
+    .our_treasure_text h1 {
+        font-size: 4vw;
+        margin-top: 1vw;
+    }
+
+    .our_treasure_text p {
+        font-size: 3vw;
+        margin-bottom: 2vw;
+    }
+
+    .our_treasure_text button {
+        align-self: center;
+        font-size: 2.3vw;
+        width: 30vw;
+        padding: 2.5vw;
+        margin-top: 1vw;
+    }
+
+    .img_treasure_back {
+    background: white;
+    }
+
+    .our_treasure_img {
+        height: auto;
+        width: 80vw;
+        margin: 0;
+        margin-top: 6vw;
+        margin-left: 5vw;
+    }
+
+    .winetastic_exp_text h3 {
+        font-size: 2.5vw;
+    }
+
+    .winetastic_exp_text h1 {
+        font-size: 4vw;
+        margin-top: 1vw;
+    }
+
+    .winetastic_exp_text p {
+        font-size: 3vw;
+        margin-bottom: 2vw;
+    }
+
+    .eventimages {
+        display: flex;
+        flex-wrap: nowrap;
+        padding-top: 2vw;
+    }
+
+    .publiceventsimg {
+        width: 10rem;
+        height: 10rem;
+    }
+
+    .privateeventsimg {
+         width: 10rem;
+        height: 10rem;
+    }
+
+    .eventimages button {
+        font-size: 2vw;
+    }
 }
+
