--- a/css/events.css
+++ b/css/events.css
@@ -182,6 +182,20 @@ button {
     height: 30rem;
 }
 
+.privateeventimage1 {
+    background-image: url(../images/photos/events/ouroffer.png);
+    background-size: cover;
+    width: auto;
+    height: 30rem;
+}
+
+.privateeventimage2 {
+    background-image: url(../images/photos/events/tasting.png);
+    background-size: cover;
+    width: auto;
+    height: 30rem;
+}
+
 .event {
     background-color: var(--color-3);
     margin: 8vw 0;
