change tags naming

--- a/css/wineshop.css
+++ b/css/wineshop.css
@@ -79,7 +79,7 @@ nav a {
 
 /* TEXT STYLING */
 
-p {
+.product_shortdescription {
     font-family: var(--primary-font);
     font-weight: 300;
 }
@@ -128,7 +128,7 @@ h5 {
     font-weight:300;
 }
 
-.productlist_price, .proce {
+.product_price, .price {
     font-family: var(--secondary-font);
     padding-top: 2vw;
     font-size: 2vw;
@@ -236,13 +236,13 @@ main {
     border: solid .005vw var(--color-3);
 }
 
-.productlist_text {
+.product_text {
     display: flex;
     flex-direction: column;
     align-items: center;
     padding-top: 2vw;
 }
 
-.productlist_description {
+.product_shortdescription {
     text-align: center;
 }
